--- a/ToDo/appsettings.json
+++ b/ToDo/appsettings.json
@@ -12,7 +12,8 @@
   "AllowedHosts": "*",
   "JWT": {
     "Issuer": "http://localhost:5298",
-    "Audience": "",
-    "SecretKey": "1234"
+    "Audience": "MyApi",
+    "SecretKey": "12345678911234561234567891123456",
+    "expiration_minutes": 60
   }
 }
