--- a/ToDo/ToDo.csproj
+++ b/ToDo/ToDo.csproj
@@ -5,6 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="TEST\**" />
+    <Content Remove="TEST\**" />
+    <EmbeddedResource Remove="TEST\**" />
+    <None Remove="TEST\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AutoMapper" Version="16.0.0" />
     <PackageReference Include="Mapster" Version="7.4.0" />
     <PackageReference Include="Mapster.DependencyInjection" Version="1.0.1" />
@@ -27,7 +34,6 @@
 
   <ItemGroup>
     <Folder Include="Migrations\" />
-    <Folder Include="TEST\" />
   </ItemGroup>
 
 </Project>
